Fix taballs typo

--- a/ybd.conf
+++ b/ybd.conf
@@ -12,4 +12,4 @@ json-schema: './schema/json-schema.json'
 no-ccache: False
 no-distcc: True
 server: 'http://192.168.56.102:8000/'
-tar-url: 'http://git.baserock.org/taballs'
+tar-url: 'http://git.baserock.org/tarballs'
