Tidyup defaults, so now there's no need for buildsystem.py

--- a/ybd.conf
+++ b/ybd.conf
@@ -7,6 +7,7 @@ aliases:
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 base: 'ybd'
 cache-server: 'http://git.baserock.org:8080/1.0/sha1s?'
+defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
 json-schema: './schema/json-schema.json'
 no-ccache: False
