Fix to default build systems
Line endings in strip and configure commands not escaped.

--- a/config/defaults.conf
+++ b/config/defaults.conf
@@ -28,10 +28,10 @@ build-systems:
     # GNU Autoconf and GNU Automake, or anything which follow the same pattern.
     configure-commands:
     - |
-      export NOCONFIGURE=1;
-      if [ -e autogen ]; then ./autogen;
-      elif [ -e autogen.sh ]; then ./autogen.sh;
-      elif [ ! -e ./configure ]; then autoreconf -ivf;
+      export NOCONFIGURE=1
+      if [ -e autogen ]; then ./autogen
+      elif [ -e autogen.sh ]; then ./autogen.sh
+      elif [ ! -e ./configure ]; then autoreconf -ivf
       fi
       ./configure --prefix="$PREFIX"
     build-commands:
@@ -40,10 +40,10 @@ build-systems:
     - make DESTDIR="$DESTDIR" install
     strip-commands:
       - &autotools-strip-commands |
-        find "$DESTDIR" -type f
-          '(' -perm -111 -o -name '*.so*' -o -name '*.cmxs' -o -name '*.node' ')'
-          -exec sh -ec
-          read -n4 hdr <"$1"   # check for elf header
+        find "$DESTDIR" -type f \
+          '(' -perm -111 -o -name '*.so*' -o -name '*.cmxs' -o -name '*.node' ')' \
+          -exec sh -ec \
+          'read -n4 hdr <"$1"   # check for elf header
           if [ "$hdr" != "$(printf \x7ELF)" ]; then
             exit 0
           fi
@@ -77,12 +77,12 @@ build-systems:
     configure-commands:
       # This is subject to change, see: https://gerrit.baserock.org/#/c/986/
       - |
-        perl Makefile.PL INSTALLDIRS=perl
-            INSTALLARCHLIB="$PREFIX/lib/perl"
-            INSTALLPRIVLIB="$PREFIX/lib/perl"
-            INSTALLBIN="$PREFIX/bin"
-            INSTALLSCRIPT="$PREFIX/bin"
-            INSTALLMAN1DIR="$PREFIX/share/man/man1"
+        perl Makefile.PL INSTALLDIRS=perl \
+            INSTALLARCHLIB="$PREFIX/lib/perl" \
+            INSTALLPRIVLIB="$PREFIX/lib/perl" \
+            INSTALLBIN="$PREFIX/bin" \
+            INSTALLSCRIPT="$PREFIX/bin" \
+            INSTALLMAN1DIR="$PREFIX/share/man/man1" \
             INSTALLMAN3DIR="$PREFIX/share/man/man3"
     build-commands:
     - make
