--- a/config/ybd.conf
+++ b/config/ybd.conf
@@ -4,14 +4,14 @@ aliases:
   'github:': 'git://github.com/'
   'gnome:': 'git://git.gnome.org/'
   'upstream:': 'git://git.baserock.org/delta/'
-artifact-server: 'http://52.24.252.112:80/'
-as-password: 'insecure'
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 base: 'ybd'
 defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
 git-server: 'http://git.baserock.org:8080/1.0/sha1s?'
 json-schema: './schema/json-schema.json'
+kbas-url: 'http://52.88.48.143/'
+kbas-password: 'insecure'
 no-ccache: False
 no-distcc: True
 serve-artifacts: True
