User must override default kbas-url, kbas-password

--- a/config/ybd.conf
+++ b/config/ybd.conf
@@ -10,7 +10,7 @@ defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
 git-server: 'http://git.baserock.org:8080/1.0/sha1s?'
 json-schema: './schema/json-schema.json'
-kbas-url: 'http://52.88.48.143/'
+kbas-url: 'http://foo.bar/'
 kbas-password: 'insecure'
 no-ccache: False
 no-distcc: True
