Disable tree-server by default
First time around, having tree-server enabled speeds up cache-keys
but means gits get pulled as needed per-build. without tree-server
all gits get loaded at once, which is easier to understand.

--- a/config/ybd.conf
+++ b/config/ybd.conf
@@ -8,7 +8,7 @@ base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 base: 'ybd'
 defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
-git-server: 'http://git.baserock.org:8080/1.0/sha1s?'
+# tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
 json-schema: './schema/json-schema.json'
 kbas-url: 'http://foo.bar/'
 kbas-password: 'insecure'
