Log elapsed by default, and verbose-logs => log-verbose

--- a/config/ybd.conf
+++ b/config/ybd.conf
@@ -8,12 +8,13 @@ base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 base: 'ybd'
 defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
-# tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
 json-schema: './schema/json-schema.json'
 kbas-url: 'http://foo.bar/'
 kbas-password: 'insecure'
+log-elapsed: True
+log-verbose: False
 no-ccache: False
 no-distcc: True
 serve-artifacts: True
 tar-url: 'http://git.baserock.org/tarballs'
-verbose-logs: False
+# tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
