Tidy up config dirs so they can be set independently

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -5,9 +5,16 @@ aliases:
   'gnome:': 'git://git.gnome.org/'
   'upstream:': 'git://git.baserock.org/delta/'
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
-base: 'ybd'
 defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
+directories:
+  'artifacts':
+  'base': ybd
+  'ccache_dir':
+  'deployment':
+  'gits':
+  'jobs':
+  'tmp':
 json-schema: './schema/json-schema.json'
 kbas-url: 'http://foo.bar/'
 kbas-password: 'insecure'
