Return of tree-server, so we can go for cached artifacts first

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -24,4 +24,4 @@ no-ccache: False
 no-distcc: True
 serve-artifacts: True
 tar-url: 'http://git.baserock.org/tarballs'
-# tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
+tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
