Cleanup for artifact cache

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -20,6 +20,7 @@ kbas-url: 'http://foo.bar/'
 kbas-password: 'insecure'
 log-elapsed: True
 log-verbose: False
+min-gigabytes: 10
 no-ccache: False
 no-distcc: True
 serve-artifacts: True
