Set artifact cache server by default

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -16,7 +16,7 @@ directories:
   'jobs':
   'tmp':
 json-schema: './schema/json-schema.json'
-kbas-url: 'http://foo.bar/'
+kbas-url: 'http://artifacts1.baserock.org:8000/'
 kbas-password: 'insecure'
 log-elapsed: True
 log-verbose: False
