Add versioning for artifact format

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -4,6 +4,7 @@ aliases:
   'github:': 'git://github.com/'
   'gnome:': 'git://git.gnome.org/'
   'upstream:': 'git://git.baserock.org/delta/'
+artifact-version: 1
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 defaults: 'config/defaults.conf'
 defs-schema: './schema/definitions-schema.json'
