Add schema validation - off by default

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -7,7 +7,6 @@ aliases:
 artifact-version: 1
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 defaults: 'config/defaults.conf'
-defs-schema: './schema/definitions-schema.json'
 directories:
   'artifacts':
   'base': ybd
@@ -24,6 +23,13 @@ log-verbose: False
 min-gigabytes: 10
 no-ccache: False
 no-distcc: True
+schemas:
+  chunk: './schemas/chunk.json-schema'
+  stratum: './schemas/stratum.json-schema'
+  system: './schemas/system.json-schema'
+  cluster: './schemas/cluster.json-schema'
+  defaults: './schemas/defaults.json-schema'
+schema-validation: False
 serve-artifacts: True
 tar-url: 'http://git.baserock.org/tarballs'
 tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
