Adding "workers" directory to the config
The workers directory holds the state for the aboriginal slaves

Conflicts:
	ybd/config/ybd.conf

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -63,6 +63,7 @@ directories:
   'gits':
   'jobs':
   'tmp':
+  'workers':
 
 # where to look for schema if none found in definitions
 json-schema: './schema/json-schema.json'
