--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -21,6 +21,7 @@ kbas-password: 'insecure'
 log-elapsed: True
 log-verbose: False
 min-gigabytes: 10
+mode: 'normal'
 no-ccache: False
 no-distcc: True
 schemas:
