Add bootstrap-commands to defaults.conf

--- a/ybd/config/defaults.conf
+++ b/ybd/config/defaults.conf
@@ -1,5 +1,8 @@
 # Baserock definitions defaults
-build-steps: ['pre-configure-commands',
+build-steps: ['pre-bootstrap-commands',
+              'bootstrap-commands',
+              'post-bootstrap-commands',
+              'pre-configure-commands',
               'configure-commands',
               'post-configure-commands',
               'pre-build-commands',
