Fix ybd.conf in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ script:
 - cd ..
 - git clone git://git.baserock.org/baserock/baserock/definitions
 - cd definitions
-- sudo echo 'mode: keys-only' > ./ybd.conf
+- cat >> ./ybd.conf << EOF
+mode: keys-only
+EOF
 - ../ybd/ybd.py ci x86_64
