Add cache-keys run to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ script:
 - cd ..
 - git clone git://git.baserock.org/baserock/baserock/definitions
 - cd definitions
+- echo 'mode: keys-only' > ybd.conf
+- ../ybd/ybd.py ci x86_64
