--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,5 @@ script:
 - cd ..
 - git clone git://git.baserock.org/baserock/baserock/definitions
 - cd definitions
-- echo 'mode: keys-only' > ybd.conf
+- export YBD_mode=keys-only
 - ../ybd/ybd.py ci x86_64
