--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,5 @@
 before_install:
-- sudo pip install pep8
-- pep8
-- sudo apt-get update -qq
-- sudo apt-get install -qq build-essential gawk git m4
-- sudo pip install fs pyyaml sandboxlib requests jsonschema
-- sudo pip install bottle cherrypy riemann-client
+- ./install.sh
 
 install:
 - sudo python setup.py install
