Real test for baserock-14.40 ci cache_key

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,8 @@ script:
 - cd ..
 - git clone git://git.baserock.org/baserock/baserock/definitions
 - cd definitions
+- git checkout baserock-14.40
 - export YBD_mode=keys-only
 - ../ybd/ybd.py ci x86_64
+- echo ci.b9de86669ce182e60e3f9445e6394b478b67a2c73b4c0764491c158c5f2569e9 > result
+- diff result ybd.result
