Add comments to ybd.conf

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -1,12 +1,60 @@
+# Copyright (C) 2015-2016 Codethink Limited
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+# =*= License: GPL-2 =*=
+#
+# ybd is designed to be run from the command line and/or as part of an
+# automated pipeline. all configuration is taken from conf files and/or
+# environment variables, in the following order of precedence:
+#
+#    YBD_* environment variables         # if found
+#    ./ybd.conf                          # if found
+#    $path/to/ybd.py/ybd.conf            # if found
+#    $path/to/ybd.py/ybd/config/ybd.conf # default, as provided in the ybd repo
+#
+# this means you can set custom config via env vars, or the definitions
+# top-level directory, or the ybd top-level directory, without having to modify
+# the supplied default ybd.conf file.
+
+# it is recommendeded to create your own ybd.conf file, so you can merge
+# new/latest ybd using git with no possibility of a conflict, and your custom
+# settings will continue to take precedence.
+#
+# to set config via environment variables, each must be prefixed with ```YBD_```
+# and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
+# convert ```_``` to ```-```, for example
+
+# where to look for upstream git servers - we can alias to use local mirrors
 aliases:
   'baserock:': 'git://git.baserock.org/baserock/'
   'freedesktop:': 'git://anongit.freedesktop.org/'
   'github:': 'git://github.com/'
   'gnome:': 'git://git.gnome.org/'
   'upstream:': 'git://git.baserock.org/delta/'
+
 artifact-version: 2
+
+# path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
+
+# where to look for definitions defaults if none found in definitions
 defaults: 'config/defaults.conf'
+
+# you can override any of the directories that ybd uses
+# 'base' specifies ybd's top level working directory - by default the other
+# directories are found under it, but you can set them to full paths, e.g.
+# base: /src and artifacts: /nfsmount/artifacts
 directories:
   'artifacts':
   'base': ybd
@@ -15,12 +63,29 @@ directories:
   'gits':
   'jobs':
   'tmp':
+
+# where to look for schema if none found in definitions
 json-schema: './schema/json-schema.json'
+
+# where to look for artifacts built by other instances of ybd
 kbas-url: 'http://artifacts1.baserock.org:8000/'
+
+# password for uploading artifacts to kbas. not kbas code expressly rejects
+# 'insecure' as a password so this *must* be changed to get it to work
 kbas-password: 'insecure'
+
+# set log-elapsed: False to show actual timestamps instead of times since start
 log-elapsed: True
+
+# set log-verbose: True to get extra log info for debugging ybd... runs slower
 log-verbose: False
+
+# ybd will automagically cull artifacts to ensure there is enough space to run
 min-gigabytes: 10
+
+# possible modes are
+# - keys-only (stops after cache-keys have been calculated)
+# - no-build (runs all the way through, but creates empty artifacts)
 mode: 'normal'
 no-ccache: False
 no-distcc: True
@@ -32,5 +97,9 @@ schemas:
   defaults: './schemas/defaults.json-schema'
 schema-validation: False
 serve-artifacts: True
+
+# trove can deliver tarballs of gits, which are faster downloads to start
 tar-url: 'http://git.baserock.org/tarballs'
+
+# trove has an api to describe a tree for a commit
 tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
