--- a/ybd/config/defaults.conf
+++ b/ybd/config/defaults.conf
@@ -1,3 +1,13 @@
+# Mapping from arch to cpu defaults
+cpus:
+  x86_32: 'i686'
+  armv8l64: 'aarch64'
+  armv8b64: 'aarch64_be'
+  mips64b: 'mips64'
+  mips64l: 'mips64el'
+  mips32b: 'mips'
+  mips32l: 'mipsel'
+
 # Baserock definitions defaults
 build-steps: ['pre-bootstrap-commands',
               'bootstrap-commands',
