[ci skip] explain artifact-version use-cases

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -27,7 +27,7 @@
 # top-level directory, or the ybd top-level directory, without having to modify
 # the supplied default ybd.conf file.
 
-# it is recommendeded to create your own ybd.conf file, so you can merge
+# NOTE: it is recommendeded to create your own ybd.conf file, so you can merge
 # new/latest ybd using git with no possibility of a conflict, and your custom
 # settings will continue to take precedence.
 #
@@ -35,7 +35,7 @@
 # and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
 # convert ```_``` to ```-```, for example
 
-# where to look for upstream git servers - we can alias to use local mirrors
+# where to look for upstream git servers - you can alias to use local mirrors
 aliases:
   'baserock:': 'git://git.baserock.org/baserock/'
   'freedesktop:': 'git://anongit.freedesktop.org/'
@@ -43,6 +43,10 @@ aliases:
   'gnome:': 'git://git.gnome.org/'
   'upstream:': 'git://git.baserock.org/delta/'
 
+# the artifact algorithm can evolve over time - artifact-version ensures we
+# don't accidentally use artifacts from an old/new version in a new/old build
+# you could put a custom value here (eg: PS1) to ensure your builds can never
+# be confused with anyone else's
 artifact-version: 2
 
 # path to be used in default chroots for builds
