[ci-skip] explain culling behaviour in ybd.conf

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -75,7 +75,7 @@ json-schema: './schema/json-schema.json'
 # where to look for artifacts built by other instances of ybd
 kbas-url: 'http://artifacts1.baserock.org:8000/'
 
-# password for uploading artifacts to kbas. not kbas code expressly rejects
+# password for uploading artifacts to kbas. note kbas code expressly rejects
 # 'insecure' as a password so this *must* be changed to get it to work
 kbas-password: 'insecure'
 
@@ -86,12 +86,14 @@ log-elapsed: True
 log-verbose: False
 
 # ybd will automagically cull artifacts to ensure there is enough space to run
+# if you don't want any artifacts to be culled, set this to zero.
 min-gigabytes: 10
 
 # possible modes are
 # - keys-only (stops after cache-keys have been calculated)
 # - no-build (runs all the way through, but creates empty artifacts)
 mode: 'normal'
+
 no-ccache: False
 no-distcc: True
 schemas:
