[ci-skip] Improve documentation of config vars, move it all into conf file

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -35,7 +35,8 @@
 # and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
 # convert ```_``` to ```-```, for example
 
-# where to look for upstream git servers - you can alias to use local mirrors
+# shortnames for commonly used online git resources - you can alias these to
+# use local mirrors
 aliases:
   'baserock:': 'git://git.baserock.org/baserock/'
   'freedesktop:': 'git://anongit.freedesktop.org/'
@@ -60,13 +61,27 @@ defaults: 'config/defaults.conf'
 # directories are found under it, but you can set them to full paths, e.g.
 # base: /src and artifacts: /nfsmount/artifacts
 directories:
+  # where ybd saves/finds built artifacts
   'artifacts':
+
+  # top-level default for ybd workings if other directories are not specified
+  # all the other directories are under base, unless specified as full path
   'base': ybd
+
+  # where ccache results are saved
   'ccache_dir':
+
+  # working directory for deployments
   'deployment':
+
+  # where local copies of git repos are saved
   'gits':
   'jobs':
+
+  # where sandboxes and other tmp directories are created
   'tmp':
+
+  # where aboriginal workers will work (in future)
   'workers':
 
 # where to look for schema if none found in definitions
@@ -85,6 +100,11 @@ log-elapsed: True
 # set log-verbose: True to get extra log info for debugging ybd... runs slower
 log-verbose: False
 
+# max-jobs controls the maximum number of threads for build-steps.
+# so for example `make -j` is set to max-jobs. if max-jobs is not specified,
+# ybd will default it to number-of-cores
+# max-jobs:
+
 # ybd will automagically cull artifacts to ensure there is enough space to run
 # if you don't want any artifacts to be culled, set this to zero.
 min-gigabytes: 10
@@ -92,10 +112,17 @@ min-gigabytes: 10
 # possible modes are
 # - keys-only (stops after cache-keys have been calculated)
 # - no-build (runs all the way through, but creates empty artifacts)
+# - normal (parses definitions into cache-keys, builds artifacts, may deploy)
 mode: 'normal'
 
 no-ccache: False
 no-distcc: True
+
+# address of a riemann server to optionally send events to
+# riemann-server: '127.0.0.1'
+# associated port of riemann server
+# riemann-port: 5555
+
 schemas:
   chunk: './schemas/chunk.json-schema'
   stratum: './schemas/stratum.json-schema'
