--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,5 +35,5 @@ check_cache_keys:
   - cd definitions
   - git checkout baserock-14.40
   - ../ybd/ybd.py ci x86_64
-  - echo ci.b9de86669ce182e60e3f9445e6394b478b67a2c73b4c0764491c158c5f2569e9 > result
-  - diff result ybd.result
+  - echo ci.b9de86669ce182e60e3f9445e6394b478b67a2c73b4c0764491c158c5f2569e9 > expected.result
+  - diff expected.result ybd.result
