Add check-overlaps: ignore, warn, exit

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -53,6 +53,12 @@ artifact-version: 2
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 
+# if two components both offer a version of one file in the target system
+# then the behaviour may be different depending on which version is installed
+# last. ybd can react to this via the check-overlaps parameter.
+# possible values are 'ignore', 'warn', 'exit'
+check-overlaps: 'warn'
+
 # where to look for definitions defaults if none found in definitions
 defaults: 'config/defaults.conf'
 
