Add comments to kbas config, set default port to 8000

--- a/kbas/config/kbas.conf
+++ b/kbas/config/kbas.conf
@@ -1,6 +1,55 @@
+# Copyright (C) 2015-2016 Codethink Limited
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program.  If not, see <http://www.gnu.org/licenses/>.
+#
+# =*= License: GPL-2 =*=
+
+# ybd is designed to be run from the command line and/or as part of an
+# automated pipeline. all configuration is taken from conf files and/or
+# environment variables, in the following order of precedence:
+#
+#    YBD_* environment variables            # if found
+#    ./kbas.conf                            # if found
+#    $path/to/kbas.py/kbas.conf             # if found
+#    $path/to/kbas.py/kbas/config/kbas.conf # default, as provided in ybd repo
+#
+# this means you can set custom config via env vars, or the definitions
+# top-level directory, or the ybd top-level directory, without having to modify
+# the supplied default ybd.conf file.
+
+# NOTE: it is recommended to create your own kbas.conf file, so you can merge
+# new/latest ybd using git with no possibility of a conflict, and your custom
+# settings will continue to take precedence.
+#
+# to set config via environment variables, each must be prefixed with ```YBD_```
+# and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
+# convert ```_``` to ```-```, for example
+
+# more logging with 'development' than 'production'
 mode: development
+
+# directory to serve from
 artifact-dir: '/src/artifacts'
+
+# ip address or hostmame of machine to serve on. 0.0.0.0 should work for most
+# cases... '0.0.0.0 means all IPv4 addresses on the local machine'
 host: 0.0.0.0
-port: 80
+
+# port to serve on
+port: 8000
+
+# password for uploads. Note: the code expressly rejects 'insecure' as a
+# password - you need to change this default, unless you don't need upload
+# (eg, where you're running kbas on a ybd build machine directly)
 password: 'insecure'
 
