[ci skip] Various README fixes

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -13,8 +13,8 @@
 # with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 # =*= License: GPL-2 =*=
-#
-# ybd is designed to be run from the command line and/or as part of an
+
+# YBD is designed to be run from the command line and/or as part of an
 # automated pipeline. all configuration is taken from conf files and/or
 # environment variables, in the following order of precedence:
 #
@@ -27,11 +27,11 @@
 # top-level directory, or the ybd top-level directory, without having to modify
 # the supplied default ybd.conf file.
 
-# NOTE: it is recommendeded to create your own ybd.conf file, so you can merge
+# NOTE: it is best to create your own ybd.conf file, so you can merge
 # new/latest ybd using git with no possibility of a conflict, and your custom
 # settings will continue to take precedence.
 #
-# to set config via environment variables, each must be prefixed with ```YBD_```
+# To set config via environment variables, each must be prefixed with ```YBD_```
 # and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
 # convert ```_``` to ```-```, for example
 
@@ -44,16 +44,16 @@ aliases:
   'gnome:': 'git://git.gnome.org/'
   'upstream:': 'git://git.baserock.org/delta/'
 
-# the artifact algorithm can evolve over time - artifact-version ensures we
-# don't accidentally use artifacts from an old/new version in a new/old build
-# you could put a custom value here (eg: PS1) to ensure your builds can never
+# The artifact algorithm can evolve over time - artifact-version ensures we
+# don't accidentally use artifacts from an old/new version in a new/old build.
+# You could put a custom value here (eg: FOO1) to ensure your builds can never
 # be confused with anyone else's
 artifact-version: 2
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 
-# if two components both offer a version of one file in the target system
+# If two components both offer a version of one file in the target system
 # then the behaviour may be different depending on which version is installed
 # last. ybd can react to this via the check-overlaps parameter.
 # possible values are 'ignore', 'warn', 'exit'
@@ -62,7 +62,7 @@ check-overlaps: 'warn'
 # where to look for definitions defaults if none found in definitions
 defaults: 'config/defaults.conf'
 
-# you can override any of the directories that ybd uses
+# You can override any of the directories that ybd uses
 # 'base' specifies ybd's top level working directory - by default the other
 # directories are found under it, but you can set them to full paths, e.g.
 # base: /src and artifacts: /nfsmount/artifacts
@@ -90,32 +90,32 @@ directories:
   # where aboriginal workers will work (in future)
   'workers':
 
-# where to look for schema if none found in definitions
+# Where to look for schema if none found in definitions
 json-schema: './schema/json-schema.json'
 
-# where to look for artifacts built by other instances of ybd
+# Where to look for artifacts already built by other instances of YBD
 kbas-url: 'http://artifacts1.baserock.org:8000/'
 
-# password for uploading artifacts to kbas. note kbas code expressly rejects
+# Password for uploading artifacts to kbas. NOTE: kbas code expressly rejects
 # 'insecure' as a password so this *must* be changed to get it to work
 kbas-password: 'insecure'
 
-# set log-elapsed: False to show actual timestamps instead of times since start
+# Set log-elapsed: False to show actual timestamps instead of times since start
 log-elapsed: True
 
-# set log-verbose: True to get extra log info for debugging ybd... runs slower
+# Set log-verbose: True to get extra log info for debugging ybd... runs slower
 log-verbose: False
 
-# max-jobs controls the maximum number of threads for build-steps.
+# Max-jobs controls the maximum number of threads for build-steps.
 # so for example `make -j` is set to max-jobs. if max-jobs is not specified,
 # ybd will default it to number-of-cores
 # max-jobs:
 
-# ybd will automagically cull artifacts to ensure there is enough space to run
+# YBD will automagically cull artifacts to ensure there is enough space to run
 # if you don't want any artifacts to be culled, set this to zero.
 min-gigabytes: 10
 
-# possible modes are
+# Possible modes are
 # - keys-only (stops after cache-keys have been calculated)
 # - no-build (runs all the way through, but creates empty artifacts)
 # - normal (parses definitions into cache-keys, builds artifacts, may deploy)
@@ -124,7 +124,7 @@ mode: 'normal'
 no-ccache: False
 no-distcc: True
 
-# address of a riemann server to optionally send events to
+# Address of a riemann server to optionally send events to
 # riemann-server: '127.0.0.1'
 # associated port of riemann server
 # riemann-port: 5555
@@ -138,8 +138,8 @@ schemas:
 schema-validation: False
 serve-artifacts: True
 
-# trove can deliver tarballs of gits, which are faster downloads to start
+# Trove can deliver tarballs of gits, which are faster downloads to start with
 tar-url: 'http://git.baserock.org/tarballs'
 
-# trove has an api to describe a tree for a commit
+# Trove has an api to describe a tree for a commit
 tree-server: 'http://git.baserock.org:8080/1.0/sha1s?'
