--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -48,7 +48,14 @@ aliases:
 # don't accidentally use artifacts from an old/new version in a new/old build.
 # You could put a custom value here (eg: FOO1) to ensure your builds can never
 # be confused with anyone else's
-artifact-version: 2
+# Summary of previous artifact-versions:
+# Missing: (to 2016-02-06) the cache_key did not include artifact-version
+#                          (now equivalent to setting artifact-version: 0)
+# 1: (from 3f9fe8bb onwards) cache_key now includes artifact-version
+# 2: (from e36be257 onwards) meta files now include cache-key
+# 3: (supported from 934fd7e8be2b4) only include applicable build-system
+#    (enabled from 16.17 onwards)
+artifact-version: 3
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
