First-pass at manifest creation

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -118,6 +118,10 @@ log-verbose: False
 # ybd will default it to number-of-cores
 # max-jobs:
 
+# YBD can output a manifest containining {name, cache_key, repo, ref, sha, md5}
+# The options are 'False', 'text' or 'yaml'
+manifest: False
+
 # YBD will automagically cull artifacts to ensure there is enough space to run
 # if you don't want any artifacts to be culled, set this to zero.
 min-gigabytes: 10
