Improve config comment

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -35,8 +35,8 @@
 # and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
 # convert ```_``` to ```-```, for example
 
-# shortnames for commonly used online git resources - you can alias these to
-# use local mirrors
+# These are shortnames for commonly used online git resources - you can alias
+# them to use local mirrors
 aliases:
   'baserock:': 'git://git.baserock.org/baserock/'
   'freedesktop:': 'git://anongit.freedesktop.org/'
@@ -49,7 +49,7 @@ aliases:
 # You could put a custom value here (eg: FOO1) to ensure your builds can never
 # be confused with anyone else's
 # Summary of previous artifact-versions:
-# Missing: (to 2016-02-06) the cache_key did not include artifact-version
+# Missing: (up to c8af09cbb) the cache_key did not include artifact-version
 #                          (now equivalent to setting artifact-version: 0)
 # 1: (from 3f9fe8bb onwards) cache_key now includes artifact-version
 # 2: (from e36be257 onwards) meta files now include cache-key
