Add new 'parse-only' and 'log-timings' modes

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -107,8 +107,11 @@ kbas-url: 'http://artifacts1.baserock.org:8000/'
 # 'insecure' as a password so this *must* be changed to get it to work
 kbas-password: 'insecure'
 
-# Set log-elapsed: False to show actual timestamps instead of times since start
-log-elapsed: True
+# log-timings (previously this was log-elapsed)
+# - 'elapsed' (default) show time since the start of the run
+# - 'normal' to show wallclock timestamps
+# - 'omit' no timestamps - makes it easier to diff one log with another
+log-timings: 'elapsed'
 
 # Set log-verbose: True to get extra log info for debugging ybd... runs slower
 log-verbose: False
@@ -127,10 +130,11 @@ manifest: False
 min-gigabytes: 10
 
 # Possible modes are
+# - parse-only (stops after dumping parsed definitions)
 # - keys-only (stops after cache-keys have been calculated)
 # - no-build (runs all the way through, but creates empty artifacts)
 # - normal (parses definitions into cache-keys, builds artifacts, may deploy)
-mode: 'normal'
+mode: normal
 
 no-ccache: False
 no-distcc: True
