--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -139,6 +139,9 @@ mode: normal
 no-ccache: False
 no-distcc: True
 
+# Some modes of ybd (eg build-only, keys-only) output a result to a file
+result-file: './ybd.result'
+
 # Address of a riemann server to optionally send events to
 # riemann-server: '127.0.0.1'
 # associated port of riemann server
