And now fix max-jobs/instances properly

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -97,6 +97,11 @@ directories:
   # where aboriginal workers will work (in future)
   'workers':
 
+# Number of instances to run in parallel on many-core systems
+# Testing suggests that parallelizing an individual build only makes sense
+# up to about 8-10 cores, so after that running more instances is better
+# instances:
+
 # Where to look for schema if none found in definitions
 json-schema: './schema/json-schema.json'
 
@@ -118,7 +123,7 @@ log-verbose: False
 
 # Max-jobs controls the maximum number of threads for build-steps.
 # so for example `make -j` is set to max-jobs. if max-jobs is not specified,
-# ybd will default it to number-of-cores
+# ybd will default it to number-of-cores, up to a moximum of 10
 # max-jobs:
 
 # YBD can output a manifest containining {name, cache_key, repo, ref, sha, md5}
