Tidyup manifest handling

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -127,7 +127,11 @@ log-verbose: False
 # max-jobs:
 
 # YBD can output a manifest containining {name, cache_key, repo, ref, sha, md5}
-# The options are 'False', 'text' or 'yaml'
+# The options are
+# - 'False': no manifest
+# - 'True': create manifest at ./<target>.manifest
+# - or path/to/manifest/filename. if filename does not end with .text,
+#   output will be json
 manifest: False
 
 # YBD will automagically cull artifacts to ensure there is enough space to run
