Create runtime systems by default

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -69,6 +69,11 @@ check-overlaps: 'warn'
 # where to look for definitions defaults if none found in definitions
 defaults: 'config/defaults.conf'
 
+# By default we create runtime systems, to optimise on size.
+# If you want everything, add the following to your ybd.conf
+# default-splits: ['-minimal', '-runtime', '-devel']
+default-splits: ['-minimal', '-runtime']
+
 # You can override any of the directories that ybd uses
 # 'base' specifies ybd's top level working directory - by default the other
 # directories are found under it, but you can set them to full paths, e.g.
