Disable splitting by default, because it's slower

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -69,10 +69,13 @@ check-overlaps: 'warn'
 # where to look for definitions defaults if none found in definitions
 defaults: 'config/defaults.conf'
 
-# By default we create runtime systems, to optimise on size.
-# If you want everything, add the following to your ybd.conf
-# default-splits: ['-minimal', '-runtime', '-devel']
-default-splits: ['-minimal', '-runtime']
+# Splitting is our name for installing a subset of files from an artifact.
+# By default we just install everything, to optimise on build speed.
+# default-splits: ['-minimal', '-runtime', '-devel'] would give the same set
+# of files, but installation takes longer
+# If you want runtime systems only, add the following to your ybd.conf
+# default-splits: ['-minimal', '-runtime']
+default-splits: []
 
 # You can override any of the directories that ybd uses
 # 'base' specifies ybd's top level working directory - by default the other
