Exit 1 on calling with no params
Normal programs exit 1 if user calls without parameters - this was
odd behaviour of ybd, introduced primarily to allow ci test of
ybd installation. This normalises the behaviour, and fixes ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ check_pep8:
 
 check_installation:
   stage: installation
-  script: "./ybd.py"
+  script: "./ybd.py | grep SETUP | grep version"
 
 check_cache_keys:
   stage: cache_keys
