Artifact-version: 4, include repo: & ref: in meta

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -55,7 +55,8 @@ aliases:
 # 2: (from e36be257 onwards) meta files now include cache-key
 # 3: (supported from 934fd7e8be2b4) only include applicable build-system
 #    (enabled from 16.17 onwards)
-artifact-version: 3
+# 4: (after da2ece5f) include definitions repo: & ref: in meta for non-chunks
+artifact-version: 4
 
 # path to be used in default chroots for builds
 base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
