Fix comments in default ybd.conf

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -33,7 +33,7 @@
 #
 # To set config via environment variables, each must be prefixed with ```YBD_```
 # and using ```_``` instead of ```-```. ybd will strip the YBD_ prefix and
-# convert ```_``` to ```-```, for example
+# convert ```_``` to ```-```
 
 # These are shortnames for commonly used online git resources - you can alias
 # them to use local mirrors
@@ -55,7 +55,7 @@ aliases:
 # 2: (from e36be257 onwards) meta files now include cache-key
 # 3: (supported from 934fd7e8be2b4) only include applicable build-system
 #    (enabled from 16.17 onwards)
-# 4: (after da2ece5f) include definitions repo: & ref: in meta for non-chunks
+# 4: (after d33e0c8a9) include definitions repo: & ref: in meta for non-chunks
 artifact-version: 4
 
 # path to be used in default chroots for builds
@@ -108,7 +108,8 @@ directories:
 
 # Number of instances to run in parallel on many-core systems
 # Testing suggests that parallelizing an individual build only makes sense
-# up to about 8-10 cores, so after that running more instances is better
+# up to about 8-10 cores, so after that running more instances is better.
+# if instances is not specified, YBD will choose for itself
 # instances:
 
 # Where to look for schema if none found in definitions
@@ -143,7 +144,7 @@ log-verbose: False
 #   output will be json
 manifest: False
 
-# YBD will automagically cull artifacts to ensure there is enough space to run
+# YBD will automagically cull artifacts to ensure there is enough space to run.
 # if you don't want any artifacts to be culled, set this to zero.
 min-gigabytes: 10
 
