Add 'cleanup' option so we can leave debris around if required

--- a/ybd/config/ybd.conf
+++ b/ybd/config/ybd.conf
@@ -67,6 +67,9 @@ base-path: ['/usr/bin', '/bin', '/usr/sbin', '/sbin']
 # possible values are 'ignore', 'warn', 'exit'
 check-overlaps: 'warn'
 
+# cleanup failed builds. Note: if this is set to False, tmpdir will fill up
+cleanup: True
+
 # where to look for definitions defaults if none found in definitions
 defaults: 'config/defaults.conf'
 
